--- a/inst/vignettes/nmecr_institutional_facilties_example.Rmd
+++ b/inst/vignettes/nmecr_institutional_facilties_example.Rmd
@@ -4,7 +4,7 @@ author:
 - Mrinalini Sharma^[msharma@kw-engineering.com]
 - David Jump^[djump@kw-engineering.com]
 - Devan Johnson^[johnson@kw-engineering.com]
-date: "August 7, 2020"
+date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
   pdf_document: default
   html_document:
@@ -65,7 +65,7 @@ data(school_op_mode)
 
 ## Baseline and Performance Period Dataframes for Modeling
 
-`create_dataframe()` combines the `eload` and `temp` dataframes into one, filters by the specified start and end dates, and aggregates to an hourly, daily, or a monthly data interval. It lines up all data such that each timestamp represents attributes up until that point, e.g. an eload value corresponding to 01/02/2018 represents the energy consumption up until then - the energy consumption of 01/01/2018. The `timestamps` parameter is optional, with permissible values: 'start' and 'end', indicating whether the timestamps mark the start or the end of the period. If operating mode data^[Operating mode's data interval must be same as that of the intended model. For example, for TOWT models created using daily data, upload an operating mode dataset with daily data intervals] is supplied, this information is added to the dataframe created by `create_dataframe()`.
+`create_dataframe()` combines the `eload` and `temp` dataframes into one, filters by the specified start and end dates, and aggregates to an hourly, daily, or a monthly data interval. It lines up all data such that each timestamp represents attributes up until that point, e.g. an eload value corresponding to 01/02/2018 represents the energy consumption up until then - the energy consumption of 01/01/2018. If additional variable data is supplied, this information is added to the dataframe created by `create_dataframe()`. The `additional_variable_aggregation` parameter handles how each of the additional variables is aggregated. 
 
 
 
@@ -75,14 +75,13 @@ data(school_op_mode)
 
 baseline_df <- create_dataframe(eload_data = school_eload, 
                                 temp_data = school_temp,
-                                convert_to_data_interval = "Daily", 
-                                timestamps = "start")
+                                convert_to_data_interval = "Daily")
 
 baseline_df_with_op_mode <- create_dataframe(eload_data = school_eload, 
                                              temp_data = school_temp,
-                                             operating_mode_data = school_op_mode,
-                                             convert_to_data_interval = "Daily", 
-                                             timestamps = "start")
+                                             additional_independent_variables = school_op_mode,
+                                             additional_variable_aggregation = c(median, median, median, median),
+                                             convert_to_data_interval = "Daily")
 
 
 ```
@@ -119,94 +118,6 @@ As there isn't a high dependence on temperature, we expect that a model with Sim
 
 ### Model Creation
 
-**Simple Linear Regression:**
-
-```{r SLR_model, results = 'markup', echo = FALSE}
-
-SLR_model <- model_with_SLR(training_data = baseline_df, 
-                            model_input_options = 
-                              assign_model_inputs(regression_type = "SLR"))
-
-SLR_df <- SLR_model$training_data
-
-names(SLR_df) <- c("time", "eload", "temp", "HDD", "CDD", "model_fit_without_op.mode_info")
-
-SLR_model_with_op_mode <- model_with_SLR(training_data = baseline_df_with_op_mode, 
-                            model_input_options = 
-                              assign_model_inputs(regression_type = "SLR"))
-
-SLR_df_with_op_mode <- SLR_model_with_op_mode$training_data
-
-names(SLR_df_with_op_mode) <- c("time", "eload", "temp", "HDD", "CDD", "school holidays", 
-                                "summer maintenance", "summer school", "pre-class ramp up",
-                                "model_fit_with_op.mode_info")
-
-SLR_all_data <- SLR_df %>%
-  dplyr::inner_join(SLR_df_with_op_mode, by = c("time", "temp", "HDD", "CDD", "eload"))
-  
-
-
-```
-
-```{r SLR model, fig.width=7, fig.height=3, echo = FALSE, results='hide'}
-
-SLR_plot_data <- SLR_all_data %>%
-  tidyr::gather(key = "variable", value = "value", -c("time", "temp", "CDD", "HDD",
-                                                      "school holidays", "summer maintenance", "summer school", 
-                                                      "pre-class ramp up"))
-
-SLR_plot_data %>%
-  filter(variable != "model_fit_with_op.mode_info") %>%
-  ggplot2::ggplot(aes(x = time, y = value)) +
-  geom_line(aes(color = variable), size = 1) +
-  xlab("Time") +
-  scale_y_continuous(name = "Energy Data & Model Fit (kWh)", labels = scales::comma) +
-  theme_minimal() +
-  theme(legend.position = "bottom") +
-  theme(legend.title = element_blank())
-  
-```
-
-Figure 3: Baseline Energy Use modeled with Simple Linear Regression over Time
-
-```{r SLR model 2, fig.width=7, fig.height=3, echo = FALSE, results='hide'}
-
-SLR_plot_data %>%
-  filter(variable != "model_fit_without_op.mode_info") %>%
-  ggplot2::ggplot(aes(x = time, y = value)) +
-  geom_line(aes(color = variable), size = 1) +
-  xlab("Time") +
-  scale_y_continuous(name = "Energy Data & Model Fit (kWh)", labels = scales::comma) +
-  theme_minimal() +
-  theme(legend.position = "bottom") +
-  theme(legend.title = element_blank())
-  
-```
-
-Figure 4: Baseline Energy Use modeled with Simple Linear Regression over Time with Operating Mode Information
-
-The model with the operating model information performs better than the one without. However, it fails to capture the time-based component of the energy use variation.
-
-``` {r SLR scatter, fig.width=7, fig.height=3, echo = FALSE, results='hide'}
-  
- ggplot2::ggplot(SLR_plot_data, aes(x = temp, y = value, -c("time", "temp", "CDD", "HDD", 
-                                                      "school holidays", "summer maintenance", "summer school", 
-                                                      "pre-class ramp up"))) +
-  geom_point(aes(color = variable), size = 1) +
-  xlab("Temperature") +
-  scale_y_continuous(name = "Energy Data & Model Fit (kWh)", labels = scales::comma) +
-  theme_minimal() +
-  theme(legend.position = "bottom") +
-  theme(legend.title = element_blank())
-
-
-```
-
-Figure 5: Baseline Energy Use modeled with Simple Linear Regression over Temperature 
-
-Figure 5 shows that the model without the operating mode information tends to average between the high and the low usage. The model with the operating mode information captures this variation better.
-
-
 **Time of Week and Temperature:**
 
 ```{r TOWT_model, results='markup', echo = FALSE}
@@ -224,9 +135,9 @@ TOWT_model_with_op_mode <- model_with_TOWT(training_data = baseline_df_with_op_m
 
 TOWT_df_with_op_mode <- TOWT_model_with_op_mode$training_data
 
-names(TOWT_df_with_op_mode) <- c("time", "eload", "temp", "HDD", "CDD", "school holidays", 
+names(TOWT_df_with_op_mode) <- c("time", "eload", "temp", "school holidays", 
                                  "summer maintenance", "summer school", "pre-class ramp up",
-                                  "model_fit_with_op.mode_info")
+                                 "HDD", "CDD",  "model_fit_with_op.mode_info")
 
 TOWT_all_data <- TOWT_df %>%
   dplyr::inner_join(TOWT_df_with_op_mode, by = c("time", "temp", "HDD", "CDD", "eload"))
@@ -255,7 +166,7 @@ TOWT_plot_data %>%
 
 ```
 
-Figure 6: Baseline Energy Use modeled with Time-of-week and Temperature over Time
+Figure 3: Baseline Energy Use modeled with Time-of-week and Temperature over Time
 
 ```{r TOWT_model2, fig.width=7, fig.height=3, echo = FALSE, results='hide'}
 
@@ -274,7 +185,7 @@ TOWT_plot_data %>%
 
 ```
 
-Figure 7: Baseline Energy Use modeled with Time-of-week and Temperature over Time with Operating Mode Information
+Figure 4: Baseline Energy Use modeled with Time-of-week and Temperature over Time with Operating Mode Information
 
 ```{r TOWT scatter, fig.width=7, fig.height=3, echo = FALSE, results='hide'}
  ggplot2::ggplot(TOWT_plot_data, aes(x = temp, y = value, -c("time", "temp", "CDD", "HDD", 
@@ -289,26 +200,21 @@ Figure 7: Baseline Energy Use modeled with Time-of-week and Temperature over Tim
 
 ```
 
-Figure 8: Baseline Energy Use modeled with Time-of-week and Temperature over Temperature
+Figure 5: Baseline Energy Use modeled with Time-of-week and Temperature over Temperature
 
 The plots show that the Time-of-Week and Temperature algorithm models the energy use profile better than SLR. 
 
 This insight can be confirmed through model statistics by using the `calculate_summary_statistics()` function. The following table summarizes the results from this function for each of the models assessed above:
 
 ```{r stats, results='markup', echo=TRUE}
-
-SLR_stats <- calculate_summary_statistics(SLR_model)
-
-SLR_with_op_mode_stats <- calculate_summary_statistics(SLR_model_with_op_mode)
-
 TOWT_stats <- calculate_summary_statistics(TOWT_model)
 
 TOWT_with_op_mode_stats <- calculate_summary_statistics(TOWT_model_with_op_mode)
 
 
-all_stats <- bind_rows(SLR_stats, SLR_with_op_mode_stats, TOWT_stats, TOWT_with_op_mode_stats)
+all_stats <- bind_rows(TOWT_stats, TOWT_with_op_mode_stats)
 
-model_names <- c("SLR", "SLR with op_mode", "TOWT", "TOWT with op_mode")
+model_names <- c("TOWT", "TOWT with op_mode")
 
 all_stats <- bind_cols("Model Name" = model_names, all_stats)
 
@@ -325,8 +231,8 @@ all_stats
 
 Using the modeling statistics and the savings uncertainity for 10%, we can determine the validity of the NMEC approach for a certain project. For the building decribed here, following are the key values to be used for this assessment
 
-1. CVRMSE: 22% (should be < 25%)
-2. NDBE: 0.0000 (should be < 0.005%)
+1. CVRMSE: 17.8% (should be < 25%)
+2. NMBE: ~0.00% (should be < 0.5% and > -0.5%)
 
 The California Public Utilities Commission requires savings to be detectable above model variations. `nmecr` interprets this using ASHRAE Guideline 14 - 2014's formulation for savings uncertainty, which relates the savings uncertainty to the model goodness of fit metric CV(RMSE), the confidence level, the amount of savings, the amount of data used to develop the model, and the amount of data required to report savings. It includes a correction when autocorrelation is present (which occurs mainly in models developed from daily and hourly data). LBNL has shown this uncertainty formulation with correction for autocorrelation underestimates the savings uncertainty. More work on this issue is needed. Until a better formulation is available, `nmecr` uses ASHRAE's method only as an estimation. 
 
@@ -336,14 +242,14 @@ TOWT_savings <- calculate_savings_and_uncertainty(prediction_df = NULL,
                                                   savings_fraction = 0.1,
                                                   modeled_object = TOWT_model_with_op_mode, 
                                                   model_summary_statistics = TOWT_with_op_mode_stats,
-                                                  confidence_level = 68)
+                                                  confidence_level = 90)
 
 TOWT_savings$savings_summary_df
 ```
 
-3. Savings Uncertainty for 10% savings (at 68% confidence level): 20.4% (shoule be < 50%). 
+3. Savings Uncertainty for 10% savings (at 90% confidence level): 22% (shoule be < 50%). 
 
-The savings percentage required to meet the threshold of 50% uncertainty, at the 68% confidence level, is 3.9% (as shown by the output above, see: savings_pct_for_50pct_uncertainty).
+The savings percentage required to meet the threshold of 50% uncertainty, at the 90% confidence level, is 4.3% (as shown by the output above, see: savings_frac_for_50pct_uncertainty).
 
-In addition to evaluating the model metrics, it is essential to ensure that the modeled profile follows the actual energy use closely (see Figure 8 above).
+In addition to evaluating the model metrics, it is essential to ensure that the modeled profile follows the actual energy use closely (see Figure 5 above).
 
