--- a/inst/vignettes/nmecr_predictability.Rmd
+++ b/inst/vignettes/nmecr_predictability.Rmd
@@ -4,7 +4,7 @@ author:
 - Mrinalini Sharma^[msharma@kw-engineering.com]
 - David Jump^[djump@kw-engineering.com]
 - Devan Johnson^[johnson@kw-engineering.com]
-date: "August 7, 2020"
+date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
   pdf_document: default
   html_document:
@@ -68,7 +68,7 @@ head(temp, n=5)
 
 ## Baseline Dataframe for Modeling
 
-`create_dataframe()` combines the `eload` and `temp` dataframes into one, filters by the specified start and end dates, and aggregates to an hourly, daily, or a monthly data interval. It lines up all data such that each timestamp represents attributes up until that point, e.g. an eload value corresponding to 03/02/2012 represents the energy consumption up until then - the energy consumption of 03/01/2012. The `timestamps` parameter is optional, with permissible values: 'start' and 'end', indicating whether the timestamps mark the start or the end of the period. If operating mode data is supplied, this information is added to the dataframe created by `create_dataframe()`.
+`create_dataframe()` combines the `eload` and `temp` dataframes into one, filters by the specified start and end dates, and aggregates to an hourly, daily, or a monthly data interval. It lines up all data such that each timestamp represents data up until that point, e.g. an eload value corresponding to 03/02/2012 represents the energy consumption up until then - the energy consumption of 03/01/2012. If operating mode data is supplied, this information is added to the dataframe created by `create_dataframe()`.
 
 ```{r baseline_df, results='markup'}
 
@@ -77,7 +77,7 @@ head(temp, n=5)
 baseline_df <- create_dataframe(eload_data = eload, temp_data = temp, 
                                 start_date = "03/01/2012 00:00", 
                                 end_date = "02/28/2013 23:59", 
-                                convert_to_data_interval = "Daily", timestamps = "start")
+                                convert_to_data_interval = "Daily")
 
 head(baseline_df, 5)
 
@@ -87,7 +87,7 @@ head(baseline_df, 5)
 
 The baseline period dataframe can be used for energy data modeling using one of the four modeling algorithms available in nmecr:
 
-* `model_with_TOWT()*`: Time-of-Week & Temperature and Time-Only algorithms
+* `model_with_TOWT()`: Time-of-Week & Temperature and Time-Only algorithms
 
 * `model_with_CP()`: 3-Parameter Heating, 3-Parameter Cooling, 4-Parameter, and 5-Parameter algorithms
 
@@ -97,10 +97,12 @@ The baseline period dataframe can be used for energy data modeling using one of 
 
 The common arguments for these four algorithms are:
 
-1. training_list (output from `create_dataframe()`)
+1. training_data (output from `create_dataframe()`)
 2. model_input_options (see below)
 
-`*model_with_TOWT()` has an additional argument (prediction_list) for creating data models and predictions together. 
+`model_with_TOWT()` has two additional arguments: prediction_data and occupancy_info. prediction_data (output from create_dataframe()) provides the independent variable data over which the model can be applied to compute predictions. occupancy_info is an optional parameter to manually define the occupancy for the time-of-week aspect of the algorithm. 
+
+`model_with_HDD_CDD()` has two additional optional arguments: HDD_balancepoint and CDD_balancepoint. As the name suggests, these define the balancepoints for heating and cooling degree days. If left undefined, HDD and CDD values are calculated using a balancepoint of 65.
 
 ### model_input_options()
 
@@ -115,7 +117,8 @@ model_input_options <- assign_model_inputs(timescale_days = NULL,
                                            temp_knots_value = c(40, 45, 50, 60, 65, 90), 
                                            initial_breakpoints = c(50,65), 
                                            regression_type = "TOWT",
-                                           occupancy_threshold = 0.65)
+                                           occupancy_threshold = 0.65,
+                                           day_normalized = FALSE)
 
 ```
 
@@ -302,10 +305,10 @@ all_stats
 
 Using the modeling statistics and the savings uncertainity for 10%, we can determine the validity of the NMEC approach for a certain project. For the building decribed here, following are the key values to be used for this assessment
 
-1. CVRMSE: 6.78% (should be < 25%)
-2. NDBE: 0.0000 (should be < 0.005%)
+1. CV(RMSE): 6.7% (should be < 25%)
+2. NMBE: ~0.00% (should be < 0.5% and > -0.5%)
 
-The California Public Utilities Commission requires savings to be detectable above model variations. `nmecr` interprets this using ASHRAE Guideline 14 - 2002's formulation for savings uncertainty, which relates the savings uncertainty to the model goodness of fit metric CV(RMSE), the confidence level, the amount of savings, the amount of data used to develop the model, and the amount of data required to report savings. The formulation includes the correction polynomial developed by Sun and Balthazar[^1] for daily and monthly models. It also includes a correction when autocorrelation is present (which occurs mainly in models developed from daily and hourly data). LBNL has shown this uncertainty formulation with correction for autocorrelation underestimates the savings uncertainty. More work on this issue is needed. Until a better formulation is available, `nmecr` uses ASHRAE's method only as an estimation. 
+The California Public Utilities Commission requires savings to be detectable above model variations. `nmecr` interprets this using ASHRAE Guideline 14 - 2014's formulation for savings uncertainty, which relates the savings uncertainty to the model goodness of fit metric CV(RMSE), the confidence level, the amount of savings, the amount of data used to develop the model, and the amount of data required to report savings. The formulation includes the correction polynomial developed by Sun and Balthazar[^1] for daily and monthly models. It also includes a correction when autocorrelation is present (which occurs mainly in models developed from daily and hourly data). LBNL has shown this uncertainty formulation with correction for autocorrelation underestimates the savings uncertainty. More work on this issue is needed. Until a better formulation is available, `nmecr` uses ASHRAE's method only as an estimation. 
 
 [^1]: Sun, Y. and Baltazar, J.C., "Analysis and Improvement of the Estimation of Building Energy Savings Uncertainty," ASHRAE Transactions, vol. 119, May 2013
 
@@ -322,9 +325,9 @@ TOWT_savings_10$savings_summary_df
 
 ```
 
-3. Savings Uncertainty for 10% savings (at 90% confidence level): 16.7% (shoule be < 50%). 
+3. Savings Uncertainty for 10% savings (at 90% confidence level): 18.6% (shoule be < 50%). 
 
-The savings percentage required to meet the threshold of 50% uncertainty, at the 90% confidence level, is 3% (as shown by the output above, see: savings_pct_for_50pct_uncertainty).
+The savings percentage required to meet the threshold of 50% uncertainty, at the 90% confidence level, is 4% (as shown by the output above, see: savings_frac_for_50pct_uncertainty).
 
 In addition to evaluating the model metrics, it is essential to ensure that the modeled profile follows the actual energy use closely (see Figure 8 above), and that the four assumptions of linear regression are met by the model.
 
@@ -396,6 +399,6 @@ acf(TOWT_res_df$Residuals, lag.max = 1, plot = FALSE)
 
 ```
 
-The autocorrelation in the residuals at lag 1 is 0.608. 
+The autocorrelation in the residuals at lag 1 is 0.606. 
 
 As noted above, the Time-of-Week and Temperature models for hourly and daily data have autocorrelation, due to which the associated savings uncertainity estimates are biased. Research is being conducted to create models with reduced autocorrelation. Until then, we present the savings values with the caveat that these may be underestimated. 
