--- a/inst/vignettes/nmecr_institutional_facilties_example.Rmd
+++ b/inst/vignettes/nmecr_institutional_facilties_example.Rmd
@@ -6,9 +6,9 @@ author:
 - Devan Johnson^[johnson@kw-engineering.com]
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
-  pdf_document: default
   html_document:
     df_print: paged
+  pdf_document: default
   word_document: default
 vignette: |
   %\VignetteIndexEntry{Introduction to nmecr} %\VignetteEngine{knitr::rmarkdown} %\VignetteEncoding{UTF-8}
@@ -23,6 +23,7 @@ knitr::opts_chunk$set(
 
 library(nmecr)
 library(ggplot2)
+library(dplyr)
 ```
 
 ## Normalized Metered Energy Consumption (NMEC)
