--- a/inst/vignettes/nmecr_institutional_facilties_example.Rmd
+++ b/inst/vignettes/nmecr_institutional_facilties_example.Rmd
@@ -6,9 +6,9 @@ author:
 - Devan Johnson^[johnson@kw-engineering.com]
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
+  pdf_document: default
   html_document:
     df_print: paged
-  pdf_document: default
   word_document: default
 vignette: |
   %\VignetteIndexEntry{Introduction to nmecr} %\VignetteEngine{knitr::rmarkdown} %\VignetteEncoding{UTF-8}
@@ -34,7 +34,7 @@ Meter-based energy efficiency programs are proliferating across the globe. This 
 
 *	It provides fast feedback on the facility's energy performance and savings progress
 
-*	It enables identification and troubleshooting of issues that prevent savings realization
+*	It enables the identification and troubleshooting of issues that prevent savings realization
  
 The `nmecr` package streamlines the application of the NMEC approach by enabling the:
 
@@ -46,10 +46,10 @@ The `nmecr` package streamlines the application of the NMEC approach by enabling
 
 * Quantification of uncertainties and risks associated with the energy savings projections in accordance with ASHRAE Guideline 14.
 
-For an overview of nmcer, please refer [nmecr_overview.pdf](https://github.com/kW-Labs/nmecr/blob/master/vignettes/nmecr.pdf)
+For an overview of nmcer, please refer [nmecr_overview.pdf](https://github.com/kW-Labs/nmecr/blob/master/inst/vignettes/nmecr_overview.pdf)
 
 
-Facilities outside the commercial sector have more drivers of energy use than just time and temperature. Institutional facilities, such as schools and government offices, have distinct operating profiles in different parts of the calendar year. These distinct operating profiles can be acconted for by adding variables to the dataframes that are served up to the modeling algorithms. These additional variables are indicator variables, indicating the beginning and end of an operating profile by switching between 1s and 0s. 
+Facilities outside the commercial sector have more drivers of energy use than just time and temperature. Institutional facilities, such as schools and government offices, have distinct operating profiles in different parts of the calendar year. These distinct operating profiles can be accounted for by adding variables to the dataframes that are served up to the modeling algorithms. These additional variables are indicator variables, indicating the beginning and end of an operating profile by switching between 1s and 0s. 
 
 ## Data
 
@@ -66,7 +66,7 @@ data(school_op_mode)
 
 ## Baseline and Performance Period Dataframes for Modeling
 
-`create_dataframe()` combines the `eload` and `temp` dataframes into one, filters by the specified start and end dates, and aggregates to an hourly, daily, or a monthly data interval. It lines up all data such that each timestamp represents attributes up until that point, e.g. an eload value corresponding to 01/02/2018 represents the energy consumption up until then - the energy consumption of 01/01/2018. If additional variable data is supplied, this information is added to the dataframe created by `create_dataframe()`. The `additional_variable_aggregation` parameter handles how each of the additional variables is aggregated. 
+`create_dataframe()` combines the `eload` and `temp` dataframes into one, filters by the specified start and end dates, and aggregates to an hourly, daily, or monthly data interval. It lines up all data such that each timestamp represents attributes up until that point, e.g. an eload value corresponding to 01/02/2018 represents the energy consumption up until then - the energy consumption of 01/01/2018. If additional variable data is supplied, this information is added to the dataframe created by `create_dataframe()`. The `additional_variable_aggregation` parameter handles how each of the additional variables is aggregated. 
 
 
 
@@ -115,7 +115,7 @@ ggplot2::ggplot(baseline_df, aes(x = temp, y = eload)) +
 Figure 2: Baseline Energy Use over Temperature
 
 
-As there isn't a high dependence on temperature, we expect that a model with Simple Linear Regression will not be able to capture all the variation in the energy use profile:
+As there isn't a high dependence on temperature, we expect that a model with Simple Linear Regression will not be able to capture all the variations in the energy use profile:
 
 ### Model Creation
 
@@ -232,7 +232,7 @@ all_stats
 
 ## Assessing project fit for NMEC
 
-Using the modeling statistics and the savings uncertainity for 10%, we can determine the validity of the NMEC approach for a certain project. For the building decribed here, following are the key values to be used for this assessment
+Using the modeling statistics and the savings uncertainty for 10%, we can determine the validity of the NMEC approach for a certain project. For the building described here, the items that follow contain key values to be used for this assessment.
 
 1. CVRMSE: 17.8% (should be < 25%)
 2. NMBE: ~0.00% (should be < 0.5% and > -0.5%)
@@ -250,7 +250,7 @@ TOWT_savings <- calculate_savings_and_uncertainty(prediction_df = NULL,
 TOWT_savings$savings_summary_df
 ```
 
-3. Savings Uncertainty for 10% savings (at 90% confidence level): 22% (shoule be < 50%). 
+3. Savings Uncertainty for 10% savings (at 90% confidence level): 22% (should be < 50%). 
 
 The savings percentage required to meet the threshold of 50% uncertainty, at the 90% confidence level, is 4.3% (as shown by the output above, see: savings_frac_for_50pct_uncertainty).
 
