--- a/inst/vignettes/nmecr_overview.Rmd
+++ b/inst/vignettes/nmecr_overview.Rmd
@@ -6,9 +6,9 @@ author:
 - Devan Johnson^[johnson@kw-engineering.com]
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
+  pdf_document: default
   html_document:
     df_print: paged
-  pdf_document: default
   word_document: default
 vignette: |
   %\VignetteIndexEntry{Introduction to nmecr} %\VignetteEngine{knitr::rmarkdown} %\VignetteEncoding{UTF-8}
@@ -35,7 +35,7 @@ Meter-based energy efficiency programs are proliferating across the globe. This 
 
 *	It provides fast feedback on the facility's energy performance and savings progress
 
-*	It enables identification and troubleshooting of issues that prevent savings realization
+*	It enables the identification and troubleshooting of issues that prevent savings realization
  
 The `nmecr` package streamlines the application of the NMEC approach by enabling the:
 
@@ -75,7 +75,7 @@ head(temp, n=5)
 
 ## Baseline and Performance Period Dataframes for Modeling
 
-`create_dataframe()` combines the `eload` and `temp` dataframes into one, filters by the specified start and end dates, and aggregates to an hourly, daily, or a monthly data interval. It lines up all data such that each timestamp represents attributes up until that point, e.g. an eload value corresponding to 03/02/2012 represents the energy consumption up until then - the energy consumption of 03/01/2012. If operating mode data is supplied, this information is added to the dataframe created by `create_dataframe()`.
+`create_dataframe()` combines the `eload` and `temp` dataframes into one, filters by the specified start and end dates, and aggregates to an hourly, daily, or monthly data interval. It lines up all data such that each timestamp represents attributes up until that point, e.g. an eload value corresponding to 03/02/2012 represents the energy consumption up until then - the energy consumption of 03/01/2012. If operating mode data is supplied, this information is added to the dataframe created by `create_dataframe()`.
 
 ```{r baseline_df, results='markup'}
 
@@ -323,7 +323,7 @@ all_stats
 
 ## Assessing project fit for NMEC
 
-Using the modeling statistics and the savings uncertainity for 10%, we can determine the validity of the NMEC approach for a certain project. For the building decribed here, following are the key values to be used for this assessment
+Using the modeling statistics and the savings uncertainty for 10%, we can determine the validity of the NMEC approach for a certain project. For the building described here, the items that follow contain key values to be used for this assessment.
 
 1. CVRMSE: 6.79% (should be < 25%)
 2. NMBE: : ~0.00% (should be < 0.5% and > -0.5%)
@@ -342,7 +342,7 @@ TOWT_savings_10$savings_summary_df
 
 ```
 
-3. Savings Uncertainty for 10% savings (at 90% confidence level): 18.6% (shoule be < 50%). 
+3. Savings Uncertainty for 10% savings (at 90% confidence level): 18.6% (should be < 50%). 
 
 The savings percentage required to meet the threshold of 50% uncertainty, at the 90% confidence level, is 4% (as shown by the output above, see: savings_frac_for_50pct_uncertainty).
 
@@ -390,7 +390,7 @@ Figure 9: Performance period energy use and TOWT model predictions over Time
 Figure 10: Performance period energy use and TOWT model predictions over Temperature
 
 
-## Energy Savings Achieved and Uncertainity
+## Energy Savings Achieved and Uncertainty
 
 ```{r savings summary, results='markup'}
 
