--- a/inst/vignettes/nmecr_predictability.Rmd
+++ b/inst/vignettes/nmecr_predictability.Rmd
@@ -6,9 +6,9 @@ author:
 - Devan Johnson^[johnson@kw-engineering.com]
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
+  pdf_document: default
   html_document:
     df_print: paged
-  pdf_document: default
   word_document: default
 vignette: |
   %\VignetteIndexEntry{Introduction to nmecr} %\VignetteEngine{knitr::rmarkdown} %\VignetteEncoding{UTF-8}
@@ -69,7 +69,7 @@ head(temp, n=5)
 
 ## Baseline Dataframe for Modeling
 
-`create_dataframe()` combines the `eload` and `temp` dataframes into one, filters by the specified start and end dates, and aggregates to an hourly, daily, or a monthly data interval. It lines up all data such that each timestamp represents data up until that point, e.g. an eload value corresponding to 03/02/2012 represents the energy consumption up until then - the energy consumption of 03/01/2012. If operating mode data is supplied, this information is added to the dataframe created by `create_dataframe()`.
+`create_dataframe()` combines the `eload` and `temp` dataframes into one, filters by the specified start and end dates, and aggregates to an hourly, daily, or monthly data interval. It lines up all data such that each timestamp represents data up until that point, e.g. an eload value corresponding to 03/02/2012 represents the energy consumption up until then - the energy consumption of 03/01/2012. If operating mode data is supplied, this information is added to the dataframe created by `create_dataframe()`.
 
 ```{r baseline_df, results='markup'}
 
@@ -304,7 +304,7 @@ all_stats
 
 ## Assessing project fit for NMEC
 
-Using the modeling statistics and the savings uncertainity for 10%, we can determine the validity of the NMEC approach for a certain project. For the building decribed here, following are the key values to be used for this assessment
+Using the modeling statistics and the savings uncertainty for 10%, we can determine the validity of the NMEC approach for a certain project. For the building described here, the items that follow contain key values to be used for this assessment.
 
 1. CV(RMSE): 6.7% (should be < 25%)
 2. NMBE: ~0.00% (should be < 0.5% and > -0.5%)
@@ -326,7 +326,7 @@ TOWT_savings_10$savings_summary_df
 
 ```
 
-3. Savings Uncertainty for 10% savings (at 90% confidence level): 18.6% (shoule be < 50%). 
+3. Savings Uncertainty for 10% savings (at 90% confidence level): 18.6% (should be < 50%). 
 
 The savings percentage required to meet the threshold of 50% uncertainty, at the 90% confidence level, is 4% (as shown by the output above, see: savings_frac_for_50pct_uncertainty).
 
@@ -334,7 +334,7 @@ In addition to evaluating the model metrics, it is essential to ensure that the 
 
 #### a. Linearity of Data
 
-Linearity of data is checked by plotting the predicted values (predicted energy use) against the predictor values (time, temperature). This method is straightforward when we have only one predictor variable; however, it gets increasingly tedious as the number of predictor variables increase. Another method to check for linearity in data is to plot the residuals against the predicted values. 
+Linearity of data is checked by plotting the predicted values (predicted energy use) against the predictor values (time, temperature). This method is straightforward when we have only one predictor variable; however, it gets increasingly tedious as the number of predictor variables increases. Another method to check for linearity in data is to plot the residuals against the predicted values. 
 
 The data fulfills this linearity assumption if the residuals are scatted randomly around the zero line.
 
@@ -402,4 +402,4 @@ acf(TOWT_res_df$Residuals, lag.max = 1, plot = FALSE)
 
 The autocorrelation in the residuals at lag 1 is 0.606. 
 
-As noted above, the Time-of-Week and Temperature models for hourly and daily data have autocorrelation, due to which the associated savings uncertainity estimates are biased. Research is being conducted to create models with reduced autocorrelation. Until then, we present the savings values with the caveat that these may be underestimated. 
+As noted above, the Time-of-Week and Temperature models for hourly and daily data have autocorrelation, due to which the associated savings uncertainty estimates are biased. Research is being conducted to create models with reduced autocorrelation. Until then, we present the savings values with the caveat that these may be underestimated. 
